fix stretched images

--- a/src/pages/apps.module.scss
+++ b/src/pages/apps.module.scss
@@ -50,6 +50,7 @@
 
 .appImage {
   max-height: calc(13 * var(--spacing-mega));
+  width: auto;
 }
 
 .downloadButtonsContainer {
